--- a/style.css
+++ b/style.css
@@ -4,15 +4,28 @@
     padding-block: 0;
 }
 
+body {
+    background-color: azure;
+}
+
+nav {
+    width: 100%;
+    height: 100px;
+    background-color: darkgray;
+}
+
 
 
 ul li {
 
     list-style: none;
     display: inline-block;
+    line-height: 100px;
+
 }
 
 ul li a {
 
     text-decoration: none;
+    padding: 0 20px;
 }
