--- a/style.css
+++ b/style.css
@@ -1,8 +1,18 @@
+body {
+    background-color: azure;
+}
+
+nav {
+    width: 100%;
+    height: 100px;
+    background-color: darkgray;
+}
 
 ul li {
 
     list-style: none;
-
+    display: inline-block;
+    line-height: 100px;
 
 }
 
