--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+body {
+    background-color: azure;
+}
+
+nav {
+    width: 100%;
+    height: 100px;
+    background-color: darkgray;
+}
 
 ul li {
 
@@ -10,6 +19,7 @@ ul li {
 ul li a {
 
     text-decoration: none;
+    padding: 0 20px;
     
 }
 
