--- a/style.css
+++ b/style.css
@@ -19,6 +19,9 @@ ul li {
 ul li a {
 
     text-decoration: none;
+    font-size-adjust: 15px;
+    font-family: 'Times New Roman', Times, serif;
+    color: black;
     padding: 0 20px;
     
 }
